--- a/LUCKYJET/index.css
+++ b/LUCKYJET/index.css
@@ -10,6 +10,7 @@
 }
 
 
+
 .smallt {
     position: absolute;
     margin-top: 115px;
@@ -19,30 +20,32 @@
 
 }
 
-
-
-#waitingText {
-    font-family: 'SF Pro Display', sans-serif;                                            
-    margin-top: 10px;
-    font-size: 20px; 
-    font-weight: bold; 
-}
-
-
-.kif {
+.visible {
+    overflow: hidden;
     position: absolute;
-    font-family: 'SF Pro Display', sans-serif; 
-    font-size: 45px;
-    margin-top: 150px;
-    font-weight: 900;
-    color: #944ef5;
-    transition: font-size 0.4s ease;
-    z-index: 5;
+    width: 325px;
+    height: 325px;
+    margin-top: 90px;
+    margin-left: 0px;
+    border-radius: 10px;
+
 }
+
+iframe {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -65px;
+    border: none;
+    border-radius: 15px;
+    z-index: 6;
+}
+
 
 .text1 {
     position: absolute;
-    margin-top: 150px;
+    margin-top: 200px;
     margin-right: 0px;
     font-size: 70px;
     font-weight: bold;
@@ -53,7 +56,7 @@
         }
         .betting {
             position: absolute;
-            margin-top: 345px;
+            margin-top: 380px;
             margin-right: 0px;
             font-size: 80px;
             font-weight: bold;
@@ -64,7 +67,7 @@
         }
         .fly {
             position: absolute;
-            margin-top: 355px;
+            margin-top: 390px;
             margin-right: 0px;
             font-size: 60px;
             font-weight: bold;
@@ -153,13 +156,6 @@
     }
 }
 
-
-.tg_icon {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-} 
-
 .page::before {
     content: "";
     background-image: url('images/bg.jpg');
@@ -210,6 +206,7 @@ img {
 }
 
 .winner {
+  
     display: block;
     width: 300px;
     margin: auto;
@@ -228,48 +225,59 @@ img {
 }
 
 .win {
+   
     display: block;
+    width: 320px;
     margin-top: 160px;
-    margin-left: -10px;
+    margin-left: 0px;
     position: absolute;
 }
 
 
 
 .button2 {
-    width: 300px;
+    width: 325px;
     height: 50px;
     border-radius: 12px;
-    margin-top: 474px;
+    margin-top: 500px;
     font-size: 18px;
-    margin-left: -150px;
+    margin-left: -162px;
     font-style: normal;
     font-weight: 600;
     line-height: 20px;
     letter-spacing: 0.08em;
+    text-align: center;
     position: absolute;
     border: none;
-    display: flex;
-    align-items: center;
+    display: flex; 
+    align-items: center; 
     justify-content: center;
     color: rgb(221, 221, 221);
     text-shadow: rgb(138, 138, 138) 0px 0px 20px;
     background: linear-gradient(263.87deg, rgb(148, 78, 245) 0%, rgb(92, 36, 252) 100%);
     box-shadow: rgba(25, 201, 245, 0.1) 0px 10px 20px, rgba(92, 36, 252, 0.1) 0px 10px 20px, rgb(148, 78, 245) 0px -2px 4px inset, rgba(148, 78, 245, 0.6) 0px -8px 8px inset;
     cursor: pointer;
+
+
+}
+
+.tg_icon {
+    width: 35px;
+    height: 50px; 
+    margin-right: 5px;
 }
 
 
 
 
 .loader2 {
-    width: 300px;
+    width: 325px;
     height: 100px;
     border: 1px solid #261c4a;
     background-color: #151028;
     position: absolute;
     border-radius: 20px; 
-    margin-top: 340px;
+    margin-top: 375px;
     margin-left: 0px;
 }
 
@@ -314,6 +322,7 @@ img {
     margin: 120px auto 0 auto;
     transition: all 0.32s ease 0s;
     z-index: 5;
+    pointer-events: none;
 }
 
 
